// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessBulkList component tests snapshot testing for a single abort instance 1`] = `
<Fragment>
  <TextContent>
    <Text
      component="h2"
    >
      Aborted
    </Text>
    <TextList>
      <TextListItem
        key="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": null,
                "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                "name": "travels",
              }
            }
          />
        </strong>
      </TextListItem>
      <TextListItem
        key="ceb1234-6ae4-deb444-9ec0-neb9809e0b"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": null,
                "id": "8ceb1234-6ae4-deb444-9ec0-neb9809e0b",
                "name": "travels1",
              }
            }
          />
        </strong>
      </TextListItem>
    </TextList>
  </TextContent>
  <TextContent
    className="pf-u-mt-sm"
  >
    <Text
      component="small"
    >
      Note: The process status has been updated. The list may appear inconsistent until you refresh any applied filters.
    </Text>
  </TextContent>
  <Divider
    className="pf-u-my-xl"
    component="div"
  />
  <TextContent>
    <Text
      component="h2"
    >
      Errors:
    </Text>
    <TextList>
      <TextListItem
        key="ceb1234-6ae4-deb444-9ec0-neb9809e0b"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": null,
                "id": "8ceb1234-6ae4-deb444-9ec0-neb9809e0b",
                "name": "travels1",
              }
            }
          />
        </strong>
         
        -
      </TextListItem>
    </TextList>
  </TextContent>
</Fragment>
`;

exports[`ProcessBulkList component tests snapshot testing multi-abort with aborted and skipped instances  1`] = `
<Fragment>
  <TextContent>
    <Text
      component="h2"
    >
      Aborted
    </Text>
    <TextList>
      <TextListItem
        key="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": null,
                "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                "name": "travels",
              }
            }
          />
        </strong>
      </TextListItem>
    </TextList>
  </TextContent>
  <Divider
    className="pf-u-my-xl"
    component="div"
  />
  <TextContent>
    <Text
      component="h2"
    >
      <span>
        Ignored processes:
      </span>
    </Text>
    <Text
      className="pf-u-mt-sm"
      component="small"
    >
      <span>
        These processes were ignored because they were completed or aborted
      </span>
    </Text>
    <TextList>
      <TextListItem
        key="e735128t-6tt7-4aa8-9ec0-e18e19809e0b"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": null,
                "id": "e735128t-6tt7-4aa8-9ec0-e18e19809e0b",
                "name": "travels",
              }
            }
          />
        </strong>
      </TextListItem>
    </TextList>
  </TextContent>
</Fragment>
`;

exports[`ProcessBulkList component tests snapshot testing multi-abort with no aborted instances and only skipped instances 1`] = `
<Fragment>
  <TextContent>
    <Text
      component="h2"
    >
      No processes were aborted
    </Text>
  </TextContent>
  <Divider
    className="pf-u-my-xl"
    component="div"
  />
  <TextContent>
    <Text
      component="h2"
    >
      <span>
        Ignored processes:
      </span>
    </Text>
    <Text
      className="pf-u-mt-sm"
      component="small"
    >
      <span>
        These processes were ignored because they were completed or aborted
      </span>
    </Text>
    <TextList>
      <TextListItem
        key="e735128t-6tt7-4aa8-9ec0-e18e19809e0b"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": null,
                "id": "e735128t-6tt7-4aa8-9ec0-e18e19809e0b",
                "name": "travels",
              }
            }
          />
        </strong>
      </TextListItem>
    </TextList>
  </TextContent>
</Fragment>
`;

exports[`ProcessBulkList component tests snapshot testing multi-abort with no skipped instances 1`] = `
<Fragment>
  <TextContent>
    <Text
      component="h2"
    >
      Aborted
    </Text>
    <TextList>
      <TextListItem
        key="8035b580-6ae4-4aa8-9ec0-e18e19809e0b"
      >
        <strong>
          <ItemDescriptor
            itemDescription={
              Object {
                "description": null,
                "id": "8035b580-6ae4-4aa8-9ec0-e18e19809e0b",
                "name": "travels",
              }
            }
          />
        </strong>
      </TextListItem>
    </TextList>
  </TextContent>
</Fragment>
`;
